--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,145 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body {
+    font-family: 'Montserrat', serif;
+    background-color: #000;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+}
+
+.theme-dark {
+    background-color: #000;
+    color: #fff;
+}
+
+.theme-light {
+    background-color: #fff;
+    color: #000;
+}
+
+.navbar {
+    background-color: #000;
+    z-index: 999;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.navbar li {
+    margin-right: 25px;
+}
+
+.navbar-nav .nav-link {
+    font-size: 1rem;
+}
+
+.navbar-brand img {
+    height: 50px;
+    object-fit: contain;
+}
+
+.navbar-light-mode {
+    background-color: #fff !important;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+}
+
+.navbar-light-mode .nav-link {
+    color: #000 !important;
+}
+
+.navbar-dark-mode {
+    background-color: #000 !important;
+    box-shadow: 0 2px 4px rgb(35, 35, 35);
+}
+
+.navbar-dark-mode .nav-link {
+    color: #fff !important;
+}
+
+.hero-section {
+    background: url("/images/banner/Banner_Principal_OrientaMujer.png") no-repeat center center;
+    background-size: cover;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3rem 2rem;
+    color: black;
+    overflow: hidden;
+}
+
+.hero-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+
+.hero-overlay {
+    position: relative;
+    z-index: 2;
+    text-align: center;
+    max-width: 90%;
+}
+
+.hero-text {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.hero-text h1 {
+    font-size: 2.5rem;
+}
+
+.hero-text h1 strong {
+    font-weight: bold;
+}
+
+.btn-consulta {
+    background-color: #222;
+    color: #fff;
+    padding: 0.75rem 2rem;
+    border: none;
+    font-weight: bold;
+    border-radius: 30px;
+    margin-bottom: 1rem;
+}
+
+.btn-consulta:hover {
+    background-color: #444;
+    color: #fff;
+}
+
+.link-consulta {
+    color: #000;
+    text-decoration: none;
+}
+
+.scroll-section {
+    height: calc(100vh - 70px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+}
+
+#section1 {
+    background-color: #111;
+}
+
+#section2 {
+    background-color: #222;
+}
+
+#section3 {
+    background-color: #333;
+}
+
+footer {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+}
